ComfyDefaultUserPanelPos.css
/**
 * @name Comfy Default User Panel for Comfy
 * @author finnthorz, starsuwu
 * @description Moves the User Panel back to the default position, with default spacing. Not the original author, I believe that is @finnthorz on discord.
 * @version 1.1.0
 */

 :root .panels_c48ade > .container__37e49 .avatarWrapper__37e49 {
    position: relative;
    left: 0px;
    top: 0px;
 }
 
     :root .panels_c48ade > .container__37e49 > .avatarWrapper__37e49 > .avatar__37e49 {
         width: 32px !important;
         height: 32px !important;
     }
 
         :root .panels_c48ade > .container__37e49 > .avatarWrapper__37e49 > .avatar__37e49 foreignObject {
             width: 32px !important;
             height: 32px !important;
         }
 
         :root .panels_c48ade > .container__37e49 > .avatarWrapper__37e49 > .avatar__37e49 .pointerEvents__44b0c {
             x: 22px;
             y: 22px;
         }
 
 :root section.panels_c48ade > .container__37e49 {
     height: 52px;
     justify-content: space-between;
 }
 
     :root .panels_c48ade > .container__37e49 .flex__7c0ba {
             width: 40%;
             position: relative;
             left: auto;
             top: -15%;
             flex-direction: row;
             background: transparent;
     }
 
 :root .panels_c48ade > .container__37e49 .flex__7c0ba .button__67645 { /* Deafen and Settings Buttons */
         color: var(--user-buttons-color);
         margin: var(--user-buttons-spacing) auto 0 auto;
         width: 28px;
     }
 
 :root .panels_c48ade > .container__37e49 > .flex__7c0ba > .micButtonParent__37e49 { /* Mic Button */
     width: 28px;
 }
 
 :root .panels_c48ade > .container__37e49 .avatarWrapper__37e49 > .avatar__37e49 + .nameTag__37e49 {
     display: block;
 }
 
 :root nav.guilds_c48ade .scroller-2TZvBN, :root nav.guilds_c48ade .scroller_ef3116 {
     padding-bottom: 0;
 }
 
 :root .chat_f75fb0 .form_f75fb0 {
     padding-left: 16px;
 }
 
     :root .chat_f75fb0 .form_f75fb0 .channelTextArea_f75fb0 .scrollableContainer__74017::after, :root .chat_f75fb0 .form_f75fb0 .wrapper__44df5::after {
         content: none;
     }
 
 :root .scrollerBase_d125d2 {
     position: relative;
     box-sizing: border-box;
     min-height: -webkit-fill-available;
     flex: 1 1 auto;
 }
 
 :root .unreadMentionsIndicatorBottom_ef3116 { /* Moves Unread Indicator to the bottom of the server list */
     width: 100%;
     height: 15px;
     padding: 0;
     bottom: 0;
 }

